force-app/main/default/objects/Algo_Trade__c/Algo_Trade__c.object-meta.xml
<CustomObject>
    <label>Algorithmic Trade</label>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Algorithmic Trade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Algorithmic Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>