force-app/main/default/objects/Algo_Trade__c/fields/Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage__c</fullName>
    <label>Profit Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>