force-app/main/default/objects/Algo_Trade__c/fields/Start_Balance__c.field-meta.xml
<CustomField>
    <fullName>Start_Balance__c</fullName>
    <label>Start Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>