force-app/main/default/objects/Algo_Trade__c/fields/Trading_Account__c.field-meta.xml
<CustomField>
    <fullName>Trading_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trading Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Algorithmic Trades</relationshipLabel>
    <relationshipName>Algo_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>