force-app/main/default/objects/Algo_Trade__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Profit__c</columns>
    <columns>Open_Date_Time__c</columns>
    <columns>Close_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>